firefox whitespace fix

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -144,7 +144,6 @@ body {
       .grid-list {
         text-align: left;
         margin: 20px 20px 30px 20px;
-        padding-bottom: 30px;
 
         li {
           font-size: 16px;
